@startuml
'https://plantuml.com/class-diagram

interface AuthInterface {
    + auth(login: string, password: string): bool
}

class Member {
    # login: string
    # password: string
    # age: int
}

class Admin {
    # level: AdminLevel
}

enum AdminLevel {
    Admin
    SuperAdmin
}

Admin::level --> AdminLevel
AuthInterface <|.down. Member
Admin -up-|> Member

@enduml
